Fixed-19808: File upload Field alignment issue.

--- a/app/design/adminhtml/Magento/backend/Magento_ProductVideo/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_ProductVideo/web/css/source/_module.less
@@ -187,6 +187,11 @@
 
             &.field.field-new_video_screenshot {
                 margin-bottom: 5px;
+                .admin__field-control {
+                    input {
+                        margin-top: 7px;
+                    }
+                }
             }
 
             &.field.field-new_video_screenshot_preview {
